main/static/css/info/memberships.css
.custom-select {
    max-width: 40%;
}

.card {
    padding-top: 5vh;
    padding-bottom: 5vh;
    margin-bottom: 3vh;
}

.card-title {
    padding: var(--half-content-spacer) 0;
    width: 80%;
    margin: auto;
}

.card-body {
    padding: 0 3vw;
}

.card-text {
    width: 80%;
    margin: auto;
    margin-bottom: var(--half-content-spacer);
}

.price {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: var(--half-content-spacer);
    padding: 1vh;
    border-top: solid 0.1rem #ebebeb;
    border-bottom: solid 0.1rem #ebebeb;
}

@media (min-width: 1200px) {
    .card {
        height: 95%;
        min-height: 40vh;
    }

    .card-text {
        min-height: 20vh;
    }
}

